Added server with logic
