# src/generated/java/com/tam/api/ThreatApi.java
@@ -1,67 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package com.tam.api;
-
-import com.tam.model.ThreatModelResource;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.annotations.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.servlet.http.HttpServletRequest;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.io.IOException;
-import java.util.List;
-import java.util.Optional;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-10-06T16:03:03.178+02:00")
-
-@Api(value = "threat", description = "the threat API")
-public interface ThreatApi {
-
-    Logger log = LoggerFactory.getLogger(ThreatApi.class);
-
-    default Optional<ObjectMapper> getObjectMapper() {
-        return Optional.empty();
-    }
-
-    default Optional<HttpServletRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    default Optional<String> getAcceptHeader() {
-        return getRequest().map(r -> r.getHeader("Accept"));
-    }
-
-    @ApiOperation(value = "Save threat models", nickname = "saveThreatModel", notes = "Save threat models from the frontend", tags={ "threat", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "Created test"),
-        @ApiResponse(code = 401, message = "Unauthorized"),
-        @ApiResponse(code = 405, message = "Failed to create event") })
-    @RequestMapping(value = "/threat/save",
-        produces = { "application/json" }, 
-        consumes = { "application/json" },
-        method = RequestMethod.POST)
-    default ResponseEntity<Void> saveThreatModel(@ApiParam(value = "Threat Model"  )  @Valid @RequestBody ThreatModelResource body) {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default ThreatApi interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-}
