# src/generated/java/com/tam/model/AddressResource.java
@@ -1,0 +1,131 @@
+package com.tam.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * AddressResource
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-10-13T21:19:21.629+02:00")
+
+public class AddressResource   {
+  @JsonProperty("street")
+  private String street = null;
+
+  @JsonProperty("zip")
+  private String zip = null;
+
+  @JsonProperty("city")
+  private String city = null;
+
+  public AddressResource street(String street) {
+    this.street = street;
+    return this;
+  }
+
+  /**
+   * Get street
+   * @return street
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getStreet() {
+    return street;
+  }
+
+  public void setStreet(String street) {
+    this.street = street;
+  }
+
+  public AddressResource zip(String zip) {
+    this.zip = zip;
+    return this;
+  }
+
+  /**
+   * Get zip
+   * @return zip
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getZip() {
+    return zip;
+  }
+
+  public void setZip(String zip) {
+    this.zip = zip;
+  }
+
+  public AddressResource city(String city) {
+    this.city = city;
+    return this;
+  }
+
+  /**
+   * Get city
+   * @return city
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public String getCity() {
+    return city;
+  }
+
+  public void setCity(String city) {
+    this.city = city;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    AddressResource address = (AddressResource) o;
+    return Objects.equals(this.street, address.street) &&
+        Objects.equals(this.zip, address.zip) &&
+        Objects.equals(this.city, address.city);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(street, zip, city);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class AddressResource {\n");
+    
+    sb.append("    street: ").append(toIndentedString(street)).append("\n");
+    sb.append("    zip: ").append(toIndentedString(zip)).append("\n");
+    sb.append("    city: ").append(toIndentedString(city)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
